# MarpAutomator

./: .env.example  README.md  env.example  package-lock.json  package.json  pyproject.toml  vitest.config.ts
examples/: basic_usage.py
prisma/: schema.prisma
src/__tests__/: api.test.ts  setup.ts  store.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/documents/: route.ts
src/app/api/documents/[id]/: route.ts
src/app/api/sessions/: route.ts
src/app/api/sessions/[id]/: route.ts
src/app/api/sessions/[id]/messages/: route.ts
src/app/editor/: page.tsx
src/components/: CanvaEditor.tsx  ChatInput.tsx  ChatMessage.tsx  ChatView.tsx  ExportModal.tsx  LibraryView.tsx  PresetSelector.tsx  PreviewModal.tsx  SettingsModal.tsx  Sidebar.tsx  SlideEditor.tsx
src/glm_agent/: __init__.py  agent.py  builtin_tools.py  cli.py  client.py  tools.py
src/lib/: api.ts  export.ts  fonts.ts  gemini.ts  marp.ts  prisma.ts
src/store/: useStore.ts
src/templates/: presets.ts  slideTemplates.ts
src/types/: index.ts
